[gd_scene format=3 uid="uid://2uaupgd20h03"]

[ext_resource type="Script" uid="uid://b1wsapfnx1wxj" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c4u5gk5n2aiom" path="res://InfiniteCanvas/InfiniteCanvas.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bwer12t6vfkg1" path="res://UI/Statusbar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://e4oiel4oqq0b" path="res://UI/Menubar.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c41oe1lt7u6r8" path="res://UI/MainMenu.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://c0ral10lvpo7f" path="res://UI/Toolbar.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://ct2b6hxxjlc6h" path="res://UI/Dialogs/UnsavedChangesDialog.tscn" id="7"]
[ext_resource type="Theme" uid="uid://u5qnpgxqykiv" path="res://UI/Themes/dark/theme.tres" id="8"]
[ext_resource type="PackedScene" uid="uid://dug4jmvhrb3t1" path="res://UI/Dialogs/AboutDialog.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://cgs8d5y8yrwl0" path="res://UI/Dialogs/SettingsDialog.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://jow4q8tm6qro" path="res://UI/Dialogs/NewPaletteDialog.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://dsxmmndtd4r2c" path="res://UI/ColorPalettePicker.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://6jilea2pwjuk" path="res://UI/Dialogs/EditPaletteDialog.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://bl2x4yif2wrml" path="res://UI/Dialogs/DeletePaletteDialog.tscn" id="15"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.207843, 0.211765, 0.227451, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[node name="Main" type="Control" unique_id=1828219607 node_paths=PackedStringArray("_canvas", "_statusbar", "_topbar", "_menubar", "_toolbar", "_file_dialog", "_export_dialog", "_about_window", "_settings_window", "_settings_dialog", "_brush_color_picker", "_main_menu", "_unsaved_changes_window", "_new_palette_window", "_delete_palette_window", "_edit_palette_window")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("8")
script = ExtResource("1")
_canvas = NodePath("InfiniteCanvas")
_statusbar = NodePath("Statusbar")
_topbar = NodePath("Topbar")
_menubar = NodePath("Topbar/Menubar")
_toolbar = NodePath("Topbar/Toolbar")
_file_dialog = NodePath("FileDialog")
_export_dialog = NodePath("ExportDialog")
_about_window = NodePath("AboutWindow")
_settings_window = NodePath("SettingsWindow")
_settings_dialog = NodePath("SettingsWindow/SettingsDialog")
_brush_color_picker = NodePath("BrushColorPicker")
_main_menu = NodePath("MainMenu")
_unsaved_changes_window = NodePath("UnsavedChangesWindow")
_new_palette_window = NodePath("NewPaletteWindow")
_delete_palette_window = NodePath("DeletePaletteWindow")
_edit_palette_window = NodePath("EditPaletteWindow")

[node name="InfiniteCanvas" parent="." unique_id=1552875483 instance=ExtResource("2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="Topbar" type="VBoxContainer" parent="." unique_id=97439509]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.0759259
offset_bottom = -3.99998
theme_override_constants/separation = 0

[node name="Menubar" parent="Topbar" unique_id=106382922 instance=ExtResource("4")]
layout_mode = 2
_main_menu_path = NodePath("../../MainMenu")

[node name="Toolbar" parent="Topbar" unique_id=16925772 instance=ExtResource("6")]
layout_mode = 2
file_dialog_path = NodePath("../../FileDialog")

[node name="Statusbar" parent="." unique_id=62707021 instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 1.00112)

[node name="BrushColorPicker" parent="." unique_id=1982338736 instance=ExtResource("13")]
visible = false
layout_mode = 0
offset_left = 386.102
offset_top = 82.6751
offset_right = 744.102
offset_bottom = 197.675
add_new_palette_dialog_path = NodePath("../NewPaletteWindow/NewPaletteDialog")
edit_palette_dialog = NodePath("../EditPaletteWindow/EditPaletteDialog")
delete_palette_dialog = NodePath("../DeletePaletteWindow/DeletePaletteDialog")
toolbar_path = NodePath("../Topbar/Toolbar")

[node name="BackgroundColorPickerPopup" type="Popup" parent="." unique_id=620572079]
size = Vector2i(399, 525)
theme = ExtResource("8")

[node name="PanelContainer" type="PanelContainer" parent="BackgroundColorPickerPopup" unique_id=844026660]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -202.0
offset_right = 154.5
offset_bottom = 202.0
theme_override_styles/panel = SubResource("1")

[node name="ColorPicker" type="ColorPicker" parent="BackgroundColorPickerPopup/PanelContainer" unique_id=270732040]
layout_mode = 2
edit_alpha = false
presets_visible = false

[node name="MainMenu" parent="." unique_id=463359907 instance=ExtResource("5")]
visible = false
unfocusable = false
submenu_popup_delay = 0.1
file_dialog_path = NodePath("../FileDialog")

[node name="NewPaletteWindow" type="Window" parent="." unique_id=853340294]
auto_translate_mode = 1
title = "NEW_PALETTE_DIALOG_CREATE_TITLE"
initial_position = 2
size = Vector2i(420, 100)
visible = false
exclusive = true
unresizable = true

[node name="NewPaletteDialog" parent="NewPaletteWindow" unique_id=182877193 instance=ExtResource("12")]

[node name="DeletePaletteWindow" type="Window" parent="." unique_id=1903812387]
title = "DELETE_PALETTE_DIALOG_TITLE"
initial_position = 2
size = Vector2i(420, 100)
visible = false
exclusive = true
unresizable = true

[node name="DeletePaletteDialog" parent="DeletePaletteWindow" unique_id=336116459 instance=ExtResource("15")]

[node name="EditPaletteWindow" type="Window" parent="." unique_id=656235794]
auto_translate_mode = 1
title = "EDIT_PALETTE_DIALOG_TITLE"
initial_position = 2
size = Vector2i(495, 495)
visible = false
exclusive = true

[node name="EditPaletteDialog" parent="EditPaletteWindow" unique_id=1100458516 instance=ExtResource("14")]

[node name="AboutWindow" type="Window" parent="." unique_id=1828950554]
title = "ABOUT_DIALOG_TITLE"
initial_position = 2
size = Vector2i(420, 210)
visible = false
exclusive = true
unresizable = true

[node name="AboutDialog" parent="AboutWindow" unique_id=1677254616 instance=ExtResource("9")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SettingsWindow" type="Window" parent="." unique_id=375300867]
auto_translate_mode = 1
title = "SETTINGS_TITLE"
initial_position = 2
size = Vector2i(512, 450)
visible = false
exclusive = true

[node name="SettingsDialog" parent="SettingsWindow" unique_id=1929193390 instance=ExtResource("10")]

[node name="UnsavedChangesWindow" type="Window" parent="." unique_id=578367602]
auto_translate_mode = 1
title = "UNSAVED_CHANGES_DIALOG_TITLE"
initial_position = 2
size = Vector2i(445, 90)
visible = false
exclusive = true
unresizable = true

[node name="UnsavedChangesDialog" parent="UnsavedChangesWindow" unique_id=2137952712 instance=ExtResource("7")]

[node name="FileDialog" type="FileDialog" parent="." unique_id=186216721]
initial_position = 2
size = Vector2i(625, 175)
theme = ExtResource("8")
access = 2
filters = PackedStringArray("*.etch", "*.lorien")
use_native_dialog = true

[node name="ExportDialog" type="FileDialog" parent="." unique_id=1743453807]
initial_position = 2
size = Vector2i(625, 175)
theme = ExtResource("8")
access = 2
use_native_dialog = true

[connection signal="mouse_entered" from="InfiniteCanvas" to="." method="_on_infinite_canvas_mouse_entered"]
[connection signal="mouse_exited" from="InfiniteCanvas" to="." method="_on_infinite_canvas_mouse_exited"]
[connection signal="create_new_project" from="Topbar/Menubar" to="." method="_on_create_new_project"]
[connection signal="project_closed" from="Topbar/Menubar" to="." method="_on_project_closed"]
[connection signal="project_selected" from="Topbar/Menubar" to="." method="_on_project_selected"]
[connection signal="brush_size_changed" from="Topbar/Toolbar" to="." method="_on_brush_size_changed"]
[connection signal="clear_canvas" from="Topbar/Toolbar" to="." method="_on_clear_canvas"]
[connection signal="new_project" from="Topbar/Toolbar" to="." method="_on_create_new_project"]
[connection signal="open_project" from="Topbar/Toolbar" to="." method="_on_open_project"]
[connection signal="redo_action" from="Topbar/Toolbar" to="." method="_on_redo_action"]
[connection signal="save_project" from="Topbar/Toolbar" to="." method="_on_save_project"]
[connection signal="toggle_brush_color_picker" from="Topbar/Toolbar" to="." method="_on_toggle_brush_color_picker"]
[connection signal="tool_changed" from="Topbar/Toolbar" to="." method="_on_tool_changed"]
[connection signal="undo_action" from="Topbar/Toolbar" to="." method="_on_undo_action"]
[connection signal="closed" from="BrushColorPicker" to="." method="_on_brush_color_picker_closed"]
[connection signal="color_changed" from="BrushColorPicker" to="." method="_on_brush_color_picker_color_changed"]
[connection signal="export_svg" from="MainMenu" to="." method="_export_svg"]
[connection signal="open_about_dialog" from="MainMenu" to="." method="_on_open_about_dialog"]
[connection signal="open_project" from="MainMenu" to="." method="_on_open_project"]
[connection signal="open_settings_dialog" from="MainMenu" to="." method="_on_open_settings_dialog"]
[connection signal="open_url" from="MainMenu" to="." method="_on_open_url"]
[connection signal="quit" from="MainMenu" to="." method="_on_quit"]
[connection signal="save_project" from="MainMenu" to="." method="_on_save_project"]
[connection signal="save_project_as" from="MainMenu" to="." method="_on_save_project_as"]
[connection signal="new_palette_created" from="NewPaletteWindow/NewPaletteDialog" to="." method="_on_new_palette_dialog_new_palette_created"]
[connection signal="palette_deleted" from="DeletePaletteWindow/DeletePaletteDialog" to="." method="_on_delete_palette_dialog_palette_deleted"]
[connection signal="palette_changed" from="EditPaletteWindow/EditPaletteDialog" to="." method="_on_edit_palette_dialog_palette_changed"]
[connection signal="canvas_color_changed" from="SettingsWindow/SettingsDialog" to="." method="_on_canvas_color_changed"]
[connection signal="constant_pressure_changed" from="SettingsWindow/SettingsDialog" to="." method="_on_constant_pressure_changed"]
[connection signal="grid_pattern_changed" from="SettingsWindow/SettingsDialog" to="." method="_on_grid_pattern_changed"]
[connection signal="grid_size_changed" from="SettingsWindow/SettingsDialog" to="." method="_on_grid_size_changed"]
[connection signal="ui_scale_changed" from="SettingsWindow/SettingsDialog" to="." method="_on_scale_changed"]
[connection signal="discard_changes" from="UnsavedChangesWindow/UnsavedChangesDialog" to="." method="_on_discard_unsaved_changes"]
[connection signal="save_changes" from="UnsavedChangesWindow/UnsavedChangesDialog" to="." method="_on_save_unsaved_changes"]
[connection signal="file_selected" from="ExportDialog" to="." method="_on_export_confirmed"]
